# ProjectPalAI

./: README.md
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  api.ts  index.css
client/src/components/: StepRail.tsx  StepSidebar.tsx  TranscriptStage.tsx
client/src/types/: course.ts
server/: generator.py  main.py  pptx_export.py  pyproject.toml  requirements.txt  schema.py
server/agents/: __init__.py  code_agent.py  llm.py  models.py  pipeline.py  practices_agent.py  repair_agent.py  rules.py  structure_agent.py
server/generated_tutorials/: 00a93434-9fcc-426f-8944-da957cb3e19f.json  0dde9000-58d7-4d02-9602-5e4b059fa1b5.json  33285699-c8de-4699-9bd5-831a9d8fdc5d.json  3ca91b8d-4fa6-4bd8-83e4-271b83f68d10.json  62ed1afc-206d-4cc4-80a2-25f6d9fa1638.json  798eaa50-760e-41ba-bb95-f8fa2ece24f8.json  7acec1bb-7100-487f-ae97-ea6aa7a1778a.json  95705606-860c-4213-8249-4e8236f745f0.json  96e2af4e-006d-424a-aac3-d973d5d199b1.json  d9ed1c82-f420-493c-8694-54f683330fa8.json  db45c9f3-84d8-47fc-9f6e-cca0472ccc73.json  df6c73c2-edd2-4801-8cc4-3656053850e0.json  e02b91ec-ec70-468a-98ed-294916853d34.json  e84a40d8-97ad-40a7-ac01-4ac7b3465fdb.json  fc1ec849-292e-4598-a8a4-fcd2d0983330.json
